completes exercise 2 flexbox

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,12 @@
+body {
+
+}
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +15,21 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 30px;
+  
+  display: flex;
+  padding: 5px 32px;
+  align-items: center;
+
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin: 5px;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
