flex model completed.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -16,6 +16,9 @@ body {
 }
 
 .modal {
+  display: flex;
+  flex-direction: column;
+  padding: 8px 16px;
   background: white;
   width: 480px;
   border-radius: 10px;
@@ -63,4 +66,26 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+.head{
+  margin-top: 4px;
+  display: flex;
+  justify-content: space-between;
+}
+.left{
+  display: flex;
+  gap:8px;
+}
+.header{
+  font-weight: bold;
+  font-size:large;
+}
+.foot{
+  display: flex;
+  flex-direction: column;
+  margin-left: 50px;
+}
+.buttons{
+  margin-left:50px ;
+  margin-top: 20px;
 }
